tests/rosetta/out/Elixir/calendar.error
parse: error[P052]: /workspace/mochi/tests/rosetta/x/Mochi/calendar.mochi:15:59: unexpected token "=" (expected ")")
  --> /workspace/mochi/tests/rosetta/x/Mochi/calendar.mochi:15:59

 15 |     print("      " + months[qtr*3+mi] + "           ", end="")
    |                                                           ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.